fix vertical filter alignment

--- a/assets/component-facets.css
+++ b/assets/component-facets.css
@@ -499,6 +499,25 @@ a.active-facets__button.focused .active-facets__button-inner,
   display: none;
 }
 
+.facets-vertical .active-facets .active-facets-vertical-filter:only-child > facet-remove {
+  display: none;
+}
+
+.facets-vertical .active-facets-vertical-filter {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.facets-vertical .active-facets-vertical-filter .active-facets__button-wrapper {
+  padding-top: 0;
+}
+
+.facets-vertical .active-facets__button {
+  margin-top: 0;
+  margin-bottom: 1.5rem;
+}
+
 .active-facets__button.disabled,
 .mobile-facets__clear.disabled {
   pointer-events: none;
